<resources>
    <string name="app_name">Smart Bell</string>
    <string name="reload_button">Reload</string>
    <string name="greet_message">Welcome to Smart Bell App</string>
    <string name="checkout_front_door">Checkout Your Front Door</string>
    <string name="title_activity_subscribe_to_topic">SubscribeToTopicActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="id">id</string>
    <string name="topic">Topic</string>
    <string name="generate_new_unique_name">Generate new unique name</string>
    <string name="existing_unique_name_or_generate_new">Type in existing unique name or generate new one</string>
    <string name="url">URL</string>
    <string name="name">Name</string>
    <string name="cameraimage">CameraImage</string>
    <string name="unique_name">Unique name</string>
</resources>