<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/camraIdTV"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0"
            android:text="@string/id" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchSubscription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:fontFamily="@font/adamina"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="Switch"
            android:textSize="25sp"
            android:thumbTint="#FFFFFF" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="7sp">

            <ImageView
                android:id="@+id/binImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/delete"
                app:srcCompat="@drawable/bin" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/topicTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:padding="10sp"
        android:text="@string/topic" />


</LinearLayout>