<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="30sp"
    android:layout_marginBottom="30sp"
    android:orientation="vertical"
    tools:context=".activities.CameraViewActivity">


    <TextView
        android:id="@+id/cameraNameRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:fontFamily="@font/acme"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_weight="1"
        android:text="CameraName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/recyclerCameraIV"
            android:layout_width="384sp"
            android:layout_height="288sp"
            android:layout_gravity="center"
            android:contentDescription="@string/cameraimage"
            app:srcCompat="@drawable/security_cam" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="50sp"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/recyclerReloadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="30sp"
            android:backgroundTint="@color/button_background_color"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/reload_button"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/cameraIdRecyclerTV"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/id"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</LinearLayout>